--- a/test/test8.lang
+++ b/test/test8.lang
@@ -10,17 +10,20 @@ program
     b = 2;
     
     while(a == 1 || b == 1)    //prints 2 once
-        print(a = a + 1);       
+        a = a + 1;
+    print(a);       
     a = 1;
     while(a == 2 || b == 2)    //prints 3 once
-        print(b = b + 1);
+        b = b + 1;
+    print(b);
     b = 2;
     while(a == 2 || b == 1)    // both wrong prints nothing
-        print(a);
+        print(5);
     
     while(a == 1 && b == 2)    // both true, prints 3 one time
-        print(b = b + 1);
-    
+        b = b + 1;
+    print(b);
+    b = 2;
     while(a == 2 && b == 2)    // first wrong prints nothing
         print(6);
     
@@ -31,6 +34,7 @@ program
         print(8);
     
     while(a != 5)
-        print(a = a + 1);       // prints 2, 3, 4, 5
+        a = a + 1;       // prints 5
+    print(a);
     print(9);
 }
